Ajustes nas APIs